# hotwatch

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deploy-docs.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
examples/: blocking.rs  data.json  json.rs
src/: blocking.rs  event.rs  lib.rs  util.rs
tests/: send_sync.rs
