[package]
name = "hotwatch"
version = "0.4.5"
authors = ["Francesca Lovebloom <francesca@brainiumstudios.com>"]
edition = "2018"
description = "A Rust library for conveniently watching and handling file changes."
documentation = "https://docs.rs/hotwatch"
homepage = "https://github.com/francesca64/hotwatch"
repository = "https://github.com/francesca64/hotwatch"
readme = "README.md"
keywords = ["notify", "watch", "events", "filesystem"]
license = "Apache-2.0/MIT"

[dependencies]
log = "0.4"
notify = "4.0"

[dev-dependencies]
failure = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
